ndb - bug#44689 - remove hard-coded usage of ndbout in ConsoleLogger, and use output stream given as input